# get-args-test

./: README.md  cabal.project  get-args-test.cabal
.github/workflows/: ci.yaml
app/: Main.hs
